# knockturn

./: .env  Cargo.toml  env.sample
docs/: flow.md
migrations/2019-02-06-122249_merchants/: up.sql
migrations/2019-02-09-212559_orders/: up.sql
migrations/2019-02-19-223604_create_txs/: down.sql  up.sql
migrations/2019-02-26-215914_add_reported_fields/: down.sql  up.sql
migrations/2019-03-01-153137_add_2fa/: up.sql
migrations/2019-03-06-163118_dont_store_wallet_txs/: down.sql  up.sql
migrations/2019-03-08-160948_add_fee_to_transactions/: down.sql  up.sql
migrations/2019-03-12-171017_make_transaction_status_enum/: down.sql  up.sql
migrations/2019-07-02-122948_add_refunded_manually_status/: down.sql  up.sql
migrations/2019-07-02-124030_remove_balance_from_merchant/: down.sql  up.sql
migrations/2019-07-07-223840_record_status_changes/: down.sql  up.sql
src/: app.rs  blocking.rs  clients.rs  cron.rs  cron_payout.rs  db.rs  errors.rs  extractor.rs  filters.rs  fsm.rs  fsm_payout.rs  handlers.rs  jsonrpc.rs  lib.rs  main.rs  middleware.rs  models.rs  node.rs  qrcode.rs  rates.rs  schema.rs  ser.rs  test_utils.rs  totp.rs  wallet.rs
src/handlers/: mfa.rs  paginator.rs  payment.rs  payout.rs  transaction.rs  webui.rs
templates/: 2fa.html  _paginate.html  _status_history.html  _transaction_row.html  base.html  base_customer.html  index.html  login.html  order.html  payment.html  payout.html  totp.html  transaction.html  transactions.html  withdraw.html
