[package]
name = "knockturn"
version = "0.1.0"
authors = ["Cycle42 <devs@cycle42.com>"]
edition = "2018"

[dependencies]
askama = "0.8.0"
actix-web = { version = "0.7", features=["alpn"]}
actix = "0.7"
bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
bcrypt = "0.3.0"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "uuid", "r2d2", "chrono", "serde_json"] }
dotenv = "0.13.0"
env_logger = "0.6"
log = "0.4.6"
failure = "0.1.2"
frank_jwt = "3.0"
futures = "0.1"
r2d2 = "0.8.2"
base64 = "0.10.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
strum = "0.13.0"
strum_macros = "0.13.0"
derive_deref = "1.0.2"
rand = "0.6.5"
qrcode = "0.9.0"
boringauth = "0.7.0"
data-encoding = "2.1.2"
image = { version="0.20.0", default-features = false, features=["png_codec"]}
consistenttime = "0.2.0"
mime_guess = "1.8.6"

[build-dependencies]
askama = "0.6"
