[package]
name = "knockturn"
version = "0.1.0"
authors = ["Cycle42 <devs@cycle42.com>"]
edition = "2018"

[dependencies]
askama = "0.8.0"
actix-web = { version = "1.0", features = ["client", "rust-tls", "ssl"]}
actix-web-httpauth = "0.3.0"
actix = "0.8.3"
bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
bcrypt = "0.3.0"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "uuid", "r2d2", "chrono", "serde_json", "numeric"] }
dotenv = "0.13.0"
env_logger = "0.6"
log = "0.4.6"
failure = "0.1.2"
frank_jwt = "3.0"
futures = "0.1"
r2d2 = "0.8.2"
base64 = "0.10.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
strum = "0.13.0"
strum_macros = "0.13.0"
derive_deref = "1.0.2"
rand = "0.6.5"
qrcode = "0.9.0"
boringauth = "0.8.0"
data-encoding = "2.1.2"
image = { version="0.20.0", default-features = false, features=["png_codec"]}
consistenttime = "0.2.0"
mime_guess = "1.8.6"
threadpool = "1.7.1"
derive_more = "0.14.0"
lazy_static = "1.3.0"
num_cpus = "1.10.0"
parking_lot = "0.7.1"
http = "0.1.16"
diesel-derive-enum = {version="0.4.4", features = ["postgres"]}
chrono-humanize = "0.0.11"
sentry = "0.15"
sentry-actix = "0.15"
url = "1.7.2"
serde_urlencoded = "0.5.5"
actix-session = "0.1.1"
rustls = "0.15"
bigdecimal = { version = "0.0.14"}
actix-identity = "0.1.0"

[build-dependencies]
askama = "0.6"
